# stock-calc

./: .gitignore  Cargo.toml  IMPLEMENTATION_SUMMARY.md  LICENSE  PUBLISHING.md  QUICKSTART.md  README.md  RELEASE_CHECKLIST.md  requirements.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
Formula/: stock-calc.rb
scripts/: release.sh
src/: api.rs  calculator.rs  cli.rs  config.rs  error.rs  main.rs  models.rs  notification.rs  storage.rs
